# SA4L-GPU-ClotheSimulation

./: README.md
clothe-simulator/: Cargo.toml
clothe-simulator/src/: clothe.rs  compute.wgsl  data_containers.rs  distance_shader.wgsl  lib.rs  main.rs  node.rs  normal_shader.wgsl  resultants_shader.wgsl  shader.wgsl  spring.rs
clothe-simulator/src/shaders/: compute.wgsl  distance_shader.wgsl  normal_shader.wgsl  shader.wgsl  sphere_shader.wgsl
